# strongswan

./: Android.mk.in  configure.ac
scripts/: crypt_burn.c  dh_speed.c
src/charon/: charon.c
src/charon-nm/nm/: nm_service.c
src/checksum/: Makefile.am  checksum_builder.c
src/conftest/: conftest.c
src/conftest/hooks/: custom_proposal.c
src/frontends/gnome/: configure.ac
src/ipsec/: ipsec  ipsec.8
src/libcharon/: Makefile.am
src/libcharon/attributes/: mem_pool.c
src/libcharon/bus/: bus.c
src/libcharon/config/: peer_cfg.c  peer_cfg.h  proposal.c
src/libcharon/control/: controller.c
src/libcharon/encoding/: message.c  parser.c
src/libcharon/network/: sender.c
src/libcharon/sa/: child_sa.c  child_sa.h  ike_sa.c  ike_sa.h  ike_sa_manager.c  task.h  trap_manager.c
src/libhydra/: Makefile.am
src/libhydra/kernel/: kernel_interface.c  kernel_interface.h
src/libradius/: radius_socket.c
src/libstrongswan/: Android.mk  Makefile.am  library.c  library.h
src/libstrongswan/asn1/: oid.txt
src/libstrongswan/bio/: bio_writer.c  bio_writer.h
src/libstrongswan/plugins/gmp/: Makefile.am  gmp_plugin.c  gmp_rsa_private_key.c  gmp_rsa_private_key_share.c  gmp_rsa_private_key_share.h  gmp_util.c  gmp_util.h
src/libtls/: tls_socket.c
src/pluto/: _pluto_adns  alg_info.c  pluto
src/scepclient/: scepclient.c
src/starter/: args.c  confread.c  confread.h  keywords.c  keywords.h  keywords.txt  starter.c  starterstroke.c  starterstroke.h  starterwhack.c  starterwhack.h
src/stroke/: stroke_msg.h
src/whack/: whack
testing/: make-testing  testing.conf
(+139 files in other folders)
